docs/9.2.8/acceptance/version-signoff.md
---
acceptance_scope: version
version: 9.2.8
target: FSScript Less-Than Non-Number Comparison
doc_role: acceptance-record
doc_purpose: Record formal version acceptance and signoff decision for 9.2.8.
status: signed-off
decision: accepted
signed_off_by: codex
signed_off_at: 2026-06-26
reviewed_by: codex
blocking_items: []
follow_up_required: no
evidence_count: 7
---

# Version Acceptance

## Document Purpose

- doc_type: acceptance
- intended_for: signoff-owner / reviewer / root-controller
- purpose: Record the formal 9.2.8 acceptance decision and evidence summary.

## Background

- Version: 9.2.8
- Scope: FSScript `<` and `<=` runtime comparison correctness for non-number operands.
- Goal: Ensure less-than operators support string/date-string fallback comparison consistently with the already implemented greater-than operators, while preserving numeric comparison behavior.
- Boundary: No FSScript syntax change, public Java API change, Runtime API behavior change, auth-code change, RBAC change, permission model change, audit change, or security-layer redesign.

## Acceptance Basis

- `docs/9.2.8/README.md`
- `docs/9.2.8/workitems/P1-fsscript-less-than-non-number-comparison.md`
- `docs/9.2.8/quality/P1-fsscript-less-than-non-number-comparison-implementation-quality.md`
- `docs/9.2.8/coverage/P1-fsscript-less-than-non-number-comparison-coverage-audit.md`
- `foggy-fsscript/src/main/java/com/foggyframework/fsscript/fun/LT.java`
- `foggy-fsscript/src/main/java/com/foggyframework/fsscript/fun/LT_equal.java`
- `foggy-fsscript/src/test/java/com/foggyframework/fsscript/exp/ComparisonOperatorTest.java`

## Module Summary

| Module | Owner | Status | Acceptance Record | Notes |
|---|---|---|---|---|
| `foggy-fsscript` | codex | signed-off | `docs/9.2.8/acceptance/version-signoff.md` | `<` and `<=` non-number comparison fix accepted with focused red-test evidence and full module regression. |

## Checklist

- [x] Version goal is documented in `docs/9.2.8/README.md`.
- [x] Work item records bug source, target outcome, constraints, execution check-in, and verification evidence.
- [x] Red-test evidence exists for the original `<` and `<=` runtime failure.
- [x] Implementation quality gate is reviewed and has no blocking item.
- [x] Coverage audit maps every acceptance item to unit or module-regression evidence.
- [x] Focused post-fix test passed on 2026-06-26.
- [x] Related expression regression passed on 2026-06-26.
- [x] Full `foggy-fsscript` regression passed on 2026-06-26.
- [x] Experience verification is `N/A` because this is backend/runtime-only utility behavior with no UI surface.
- [x] Guardrails were preserved: no syntax, API, Runtime API, auth-code, RBAC, permission, audit, or security-layer change.

## Evidence

- Work item:
  - `docs/9.2.8/workitems/P1-fsscript-less-than-non-number-comparison.md`
- Quality:
  - `docs/9.2.8/quality/P1-fsscript-less-than-non-number-comparison-implementation-quality.md`
- Coverage:
  - `docs/9.2.8/coverage/P1-fsscript-less-than-non-number-comparison-coverage-audit.md`
- Test:
  - Before fix: `mvn -pl foggy-fsscript -Dtest=ComparisonOperatorTest test` failed as expected, 4 tests run with 2 errors.
  - After fix: `mvn -pl foggy-fsscript -Dtest=ComparisonOperatorTest test` passed, 4 tests run, 0 failures, 0 errors, 0 skipped.
  - After fix: `mvn -pl foggy-fsscript "-Dtest=ComparisonOperatorTest,OperatorPrecedenceTest,InNotInExpTest" test` passed, 52 tests run, 0 failures, 0 errors, 0 skipped.
  - After fix: `mvn -pl foggy-fsscript test` passed, 371 tests run, 0 failures, 0 errors, 0 skipped.
- Experience:
  - N/A. No UI page, form, navigation, browser interaction, external user workflow, or visual behavior was changed.
- Delivery artifact:
  - Commit `a81053e8 fix(fsscript): support less-than non-number comparisons`.

## Risks / Open Items

- No blocking item.
- No required follow-up for 9.2.8.
- Non-blocking future cleanup: if comparison operators gain additional null, collation, or mixed-type rules, consider extracting a shared comparison helper across all relational operators.

## Final Decision

Decision: `accepted`.

9.2.8 satisfies the documented FSScript correctness scope. The original bug was exposed by a focused red test, the fix is constrained to `LT` and `LT_equal`, numeric behavior remains protected by regression tests, full `foggy-fsscript` regression passes, and no blocking quality or coverage gap remains.

## Signoff Marker

- acceptance_status: signed-off
- acceptance_decision: accepted
- signed_off_by: codex
- signed_off_at: 2026-06-26
- acceptance_record: docs/9.2.8/acceptance/version-signoff.md
- blocking_items: none
- follow_up_required: no
