docs/9.2.9/acceptance/version-signoff.md
---
acceptance_scope: version
version: 9.2.9
target: FSScript Division Operand Robustness
doc_role: acceptance-record
doc_purpose: Record formal version acceptance and signoff decision for 9.2.9.
status: signed-off
decision: accepted
signed_off_by: codex
signed_off_at: 2026-06-26
reviewed_by: codex
blocking_items: []
follow_up_required: no
evidence_count: 7
---

# Version Acceptance

## Document Purpose

- doc_type: acceptance
- intended_for: signoff-owner / reviewer / root-controller
- purpose: Record the formal 9.2.9 acceptance decision and evidence summary.

## Background

- Version: 9.2.9
- Scope: FSScript `/` runtime robustness for non-number operands.
- Goal: Ensure division no longer fails with `ClassCastException` for non-number operands while preserving existing numeric, null, and zero-division behavior.
- Boundary: No FSScript syntax change, public Java API change, Runtime API behavior change, auth-code change, RBAC change, permission model change, audit change, or security-layer redesign.

## Acceptance Basis

- `docs/9.2.9/README.md`
- `docs/9.2.9/workitems/P1-fsscript-division-operand-robustness.md`
- `docs/9.2.9/quality/P1-fsscript-division-operand-robustness-implementation-quality.md`
- `docs/9.2.9/coverage/P1-fsscript-division-operand-robustness-coverage-audit.md`
- `foggy-fsscript/src/main/java/com/foggyframework/fsscript/fun/DIVISION.java`
- `foggy-fsscript/src/test/java/com/foggyframework/fsscript/exp/ArithmeticOperatorTest.java`

## Module Summary

| Module | Owner | Status | Acceptance Record | Notes |
|---|---|---|---|---|
| `foggy-fsscript` | codex | signed-off | `docs/9.2.9/acceptance/version-signoff.md` | `/` non-number operand robustness fix accepted with focused red-test evidence and full module regression. |

## Checklist

- [x] Version goal is documented in `docs/9.2.9/README.md`.
- [x] Work item records bug source, target outcome, constraints, execution check-in, and verification evidence.
- [x] Red-test evidence exists for the original left and right operand runtime failures.
- [x] Implementation quality gate is reviewed and has no blocking item.
- [x] Coverage audit maps every acceptance item to unit or module-regression evidence.
- [x] Focused post-fix test passed on 2026-06-26.
- [x] Related expression regression passed on 2026-06-26.
- [x] Full `foggy-fsscript` regression passed on 2026-06-26.
- [x] Experience verification is `N/A` because this is backend/runtime-only utility behavior with no UI surface.
- [x] Guardrails were preserved: no syntax, API, Runtime API, auth-code, RBAC, permission, audit, or security-layer change.

## Evidence

- Work item:
  - `docs/9.2.9/workitems/P1-fsscript-division-operand-robustness.md`
- Quality:
  - `docs/9.2.9/quality/P1-fsscript-division-operand-robustness-implementation-quality.md`
- Coverage:
  - `docs/9.2.9/coverage/P1-fsscript-division-operand-robustness-coverage-audit.md`
- Test:
  - Before fix: `mvn -pl foggy-fsscript -Dtest=ArithmeticOperatorTest test` failed as expected, 5 tests run with 2 errors.
  - After fix: `mvn -pl foggy-fsscript -Dtest=ArithmeticOperatorTest test` passed, 5 tests run, 0 failures, 0 errors, 0 skipped.
  - After fix: `mvn -pl foggy-fsscript "-Dtest=ArithmeticOperatorTest,ComparisonOperatorTest,OperatorPrecedenceTest,InNotInExpTest" test` passed, 57 tests run, 0 failures, 0 errors, 0 skipped.
  - After fix: `mvn -pl foggy-fsscript test` passed, 376 tests run, 0 failures, 0 errors, 0 skipped.
- Experience:
  - N/A. No UI page, form, navigation, browser interaction, external user workflow, or visual behavior was changed.

## Risks / Open Items

- No blocking item.
- No required follow-up for 9.2.9.
- Non-blocking future cleanup: evaluate remaining numeric operators such as `BitwiseAnd`, `%`, and increment/decrement as separate work items.

## Final Decision

Decision: `accepted`.

9.2.9 satisfies the documented FSScript correctness scope. The original bug was exposed by a focused red test, the fix is constrained to `DIVISION`, existing numeric/null/zero division behavior remains protected by regression tests, full `foggy-fsscript` regression passes, and no blocking quality or coverage gap remains.

## Signoff Marker

- acceptance_status: signed-off
- acceptance_decision: accepted
- signed_off_by: codex
- signed_off_at: 2026-06-26
- acceptance_record: docs/9.2.9/acceptance/version-signoff.md
- blocking_items: none
- follow_up_required: no
